[BUGFIX] Page module Drag&Drop broken
Patch '[BUGFIX] Remove BE login scrollbars' for issue #43330 broke
the page module drag&drop for unknown reasons. The patch reverts
the change from #43330.

Fixes: #43466
Related: #43330
Releases: 6.1, 6.0
Reviewed-on: http://review.typo3.org/16882
Tested-by: Markus Klein
Tested-by: Christian Kuhn

--- a/typo3/sysext/t3skin/stylesheets/structure/main_content.css
+++ b/typo3/sysext/t3skin/stylesheets/structure/main_content.css
@@ -3,6 +3,10 @@ TYPO3 styles for basic elements
 
 - - - - - - - - - - - - - - - - - - - - - */
 
+html {
+       height: 100%;
+}
+
 select,
 textarea,
 input,
